--- a/sweet-app/package.json
+++ b/sweet-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
+    "package-name": "^0.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
