feat: 增加chat 接口

--- a/sweet-app/package.json
+++ b/sweet-app/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "dependencies": {
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
