--- a/sweet-app/package.json
+++ b/sweet-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "engines": {
     "node": ">=18.0.0",
