feat: 增加导航栏

--- a/sweet-app/package.json
+++ b/sweet-app/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export"
+    "start": "npx serve@latest out",
+    "lint": "next lint"
   },
   "engines": {
     "node": ">=18.0.0",
