--- a/sweet-app/package.json
+++ b/sweet-app/package.json
@@ -13,6 +13,7 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
     "react": "^19.0.0",
